# next-eval

./: .env.example  .gitattributes  .gitignore  .syncpackrc.ts  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENVIRONMENT_SETUP.md  README.md  biome.jsonc  dom-parser-research.md  lefthook.yml  package.json  tsconfig.json  turbo.json
.github/: CODEOWNERS
.github/workflows/: auto-assign.yml  ci-main.yml  evergreen.yml  rebase.yml  release-core.yml  release.yml  remove-stale-branch.yml  slash.yml
WebDemo/: biome.json  index.ts  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json
WebDemo/public/: sample.html  sample10.html  sample4.html
WebDemo/public/rust_mdr_pkg/: package.json  rust_mdr_utils.d.ts  rust_mdr_utils.js  rust_mdr_utils_bg.wasm.d.ts
WebDemo/public/samples/: sample12.html  sample5.html
WebDemo/rust-mdr/: Cargo.toml
WebDemo/rust-mdr/src/: lib.rs
WebDemo/src/app/: layout.tsx  page.tsx  types.ts
WebDemo/src/assets/: sample11_flat_content.json  sample11_slim_content.json  sample13_flat_content.json  sample13_hier_content.json  sample13_slim_content.json  sample15_slim_content.json  sample15_slim_usage.json  sample16_hier_content.json  sample16_hier_usage.json  sample17_hier_content.json  sample1_flat_usage.json  sample1_hier_usage.json  sample1_slim_usage.json  sample20_flat_usage.json  (+10 more)
apps/web/: README.md  biome.jsonc  next.config.js  next.config.ts  package.json  tsconfig.json  vercel.json  vitest.config.ts
code/: package-lock.json  package.json  tsconfig.json
code/src/: constant.ts
(+535 files in other folders)
