[package]
name = "rust_mdr_utils"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
# Optional: Add a crate for Levenshtein distance if you prefer not to implement it manually
# edit-distance = "2.0" 
# For more complex data structures between JS and Rust, serde can be useful
# serde = { version = "1.0", features = ["derive"] }
# serde-wasm-bindgen = "0.6" 